--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffffff</color>
+    <color name="colorSecundary">#ffffff</color>
     <color name="colorPrimaryDark">#d1d1d1</color>
-    <color name="colorSecundary">#7f0000</color>
+    <color name="colorPrimary">#7f0000</color>
     <color name="colorAccent">#d3d3d3</color>
 </resources>
